[package]
name = "vanitypubkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
secp256k1 = { version = "0.25.0", features = ["rand"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3